# DashCamAI

./: .gitignore  Architecture.md  Software-Architecture.md
dashcam-ai/: .env.example  BUILD.md  CMakeLists.txt  docker-compose.rockchip.yml  docker-compose.yml
dashcam-ai/config/: cloud-endpoints.yaml  gsensor-thresholds.yaml  storage-policy.yaml
dashcam-ai/mcu/: main.c
dashcam-ai/mcu/tasks/: comm_task.c  comm_task.h  gsensor_task.c  gsensor_task.h  kws_task.c  kws_task.h  power_task.c  power_task.h
dashcam-ai/models/: README.md
dashcam-ai/scripts/: build-rockchip.sh  deploy-rockchip.sh  jetson-bare-setup.sh  jetson-setup.sh
dashcam-ai/scripts/jetson-bare/: dashcam-event-bus.service  media-daemon.service
dashcam-ai/scripts/rv1106-init/: S90media-daemon
dashcam-ai/soc/ai-daemon/: intent_pipeline.c  intent_pipeline.h  kws_pipeline.c  kws_pipeline.h  main.c  stt_pipeline.c  stt_pipeline.h  vision_pipeline.c  vision_pipeline.h
dashcam-ai/soc/ai-daemon-py/: ai_daemon.py  clip_saver.py  event_bus.py  frame_source.py  requirements.txt  run_demo.sh  yolo_pipeline.py
dashcam-ai/soc/cloud-daemon/: main.c
dashcam-ai/soc/media-daemon/: main.c
dashcam-ai/soc/media-daemon-rs/: Cargo.toml  Dockerfile  Dockerfile.rockchip
dashcam-ai/soc/media-daemon-rs/benches/: encoder_common_bench.rs  event_bus_bench.rs  loop_writer_bench.rs  shm_bench.rs
dashcam-ai/soc/media-daemon-rs/src/: audio.rs  capture.rs  encoder.rs  encoder_common.rs  encoder_gstreamer.rs  encoder_mpp.rs  event_bus.rs  lib.rs  loop_writer.rs  main.rs  shm.rs
dashcam-ai/soc/power-daemon/: main.c
dashcam-ai/soc/shared/: event_bus.h  events.h  shm_ring_buffer.h
dashcam-ai/soc/storage-daemon/: main.c
dashcam-ai/soc/voice-daemon/: main.c
