[package]
name    = "media-daemon"
version = "0.1.0"
edition = "2021"

# ── Build targets ─────────────────────────────────────────────────────────────
#
# Jetson (bare Linux, native build):
#   cargo build --release --features jetson
#
# RV1106 (cross-compile from dev machine):
#   cargo build --release --features rockchip --target armv7-unknown-linux-gnueabihf
#
# Exactly one encoder feature must be specified — the build will fail otherwise.

[lib]
name = "media_daemon"
path = "src/lib.rs"

[[bin]]
name = "media-daemon"
path = "src/main.rs"

# ── Encoder feature flags ─────────────────────────────────────────────────────

[features]
# Jetson: GStreamer pipeline using nvv4l2h264enc (NVIDIA hardware H.264)
jetson   = ["dep:gstreamer", "dep:gstreamer-app"]
# RV1106: Rockchip MPP via unsafe FFI (librockchip_mpp.so)
rockchip = []

[dependencies]
# Async runtime — event bus I/O, Unix socket IPC
tokio          = { version = "1",    features = ["full"] }

# V4L2 camera capture
v4l            = "0.14"

# ALSA audio capture
alsa           = "0.7"

# WebRTC VAD — voice activity detection
webrtc-vad     = "0.4"

# POSIX APIs (shared memory, signals, file descriptors)
nix            = { version = "0.27", features = ["mman", "fs", "signal"] }

# Error handling
anyhow         = "1"
thiserror      = "1"

# Serialization for event bus messages
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free channels between threads
crossbeam-channel  = "0.5"

# Byte manipulation for frame data
bytes = "1"

# GStreamer — Jetson encoder only
gstreamer     = { version = "0.21", optional = true }
gstreamer-app = { version = "0.21", optional = true }

[dev-dependencies]
# Micro-benchmark harness
criterion      = { version = "0.5", features = ["html_reports"] }
# Temporary directories for disk I/O tests
tempfile       = "3"
# Auto-mock generation for trait boundaries
mockall        = "0.12"
# Tokio test macro + in-process Unix socket pairs
tokio          = { version = "1", features = ["full", "test-util"] }

[[bench]]
name    = "shm_bench"
harness = false

[[bench]]
name    = "encoder_common_bench"
harness = false

[[bench]]
name    = "event_bus_bench"
harness = false

[[bench]]
name    = "loop_writer_bench"
harness = false

[profile.release]
opt-level     = 3
lto           = true     # Link-time optimisation — important on memory-constrained SoC
codegen-units = 1        # Single codegen unit for best optimisation
strip         = true     # Strip debug symbols from release binary

[profile.bench]
opt-level     = 3
lto           = false    # Faster bench compile cycles
